<resources>
    <string name="app_name">PracticeContraintLayout</string>
    <string name="sign_up">sign up</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
